
4.5 -> 5.0:
    - rse: allow RPM to build again even if iconv(3) is not available
    - rse: provide --with-db-{largefile,rpc,mutex} options for flexibly building DB
    - rse: portability: replace hard-coded -ldl (Linux) for Lua with Autoconf checks
    - rse: added devtool/devtool.conf build environment helper
    - rse: pruned tree from third-party libraries (except for zlib, db and lua)
    - goeran: updated "sv" translation.
    - rse: cleaned up the "autogen.sh" scripts.
    - jbj: skip packages/headers with unverifiable signatures.
    - start rpm-5.0 development.

=============================================================================

4.4.9 -> 4.5:
	- start rpm-4.5 development.
	- fix: avoid accessing freed memory.
	- solaris: add clearenv stub.
	- keys: add Getpass stub vector.
	- fix: swap PART_INSTALL and PART_CLEAN automagic cleanup.
	- build against rpm5.org cvs,
	- upgrade to file-4.21 (CVE-2007-2026, CVE-2007-2799).
	- update README to point to new rpm5.org home.
	
4.4.8 -> 4.4.9:
	- start rpm-4.4.9 devel.
	- replace rpm2cpio with a shell script (#229422).
	- debugedit: canonicalize_path was broken (#232222).
	- permit clean scriptlet element overrides.
	- add RPMTAG_REPOTAG.
	- non-linux: avoid all mutexes if waitpid is used for reaping.
	- use pipe(2) for SIGCHLD receipt signalling.
	- python: teach labelCompare that missing epoch is same as 0 (#227860).
	- add source rpm file attributes, eliminate RPMBUILD_ISFOO.
	- populate sourceHeader with build restrictions early instead.
	- add --specsrpm to permit querying parsed source rpm header.
	- populate sourceHeader with source/patch tags for query (#227513).
	- make sure srpm header is initialized exactly once while refactoring.
	- add Keywords: and BuildPlatforms: syntax.
	- perform an RPMTAG_ICON tracheotomy.
	- perl: extract dependencies from *.pm iff on /usr/lib* (#234691).
	- refactor header subroutines out of -lrpmlib into -lrpmdb.